<resources>
    <string name="app_name" translatable="false">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="recent_destinations">Recent destinations</string>
    <string name="destination">Destination</string>
    <string name="recent_trips">Recent trips</string>
    <string name="send_arrival_notification">Send arrival notification</string>
    <string name="send_almost_there_notification">Send almost there notification</string>
    <string name="send_initial_notification">Send initial notification</string>
    <string name="send_periodic_notifications">Send periodic notifications</string>
    <string name="no_recent_trips">No recent trips</string>

    <string name="title_activity_trip">TripActivity</string>
    <string name="colon" translatable="false">:</string>
    <string name="remaining_time">Remaining time</string>

    <string name="contact">Contact</string>
    <string name="stopCapital">Stop</string>
    <string name="stop">stop</string>

    <!-- Strings fuer die TripActivity -->
    <string name="smsPermissionNotGranted">The app needs your permission to send sms messages to the recipient to tell him/her how long it takes you to arrive.</string>
    <string name="activate_gps_hint">Please enable the location services. Otherwise the app has no means of detecting your current location and cannot estimate arrival times.</string>
    <string name="exit_hint">If you go back the app will no longer monitor your position and send status updates. Do you want to go back?</string>

    <!-- Strings for the distance notification service -->
    <string name="distancenotificationservice_is_initializing_notification_message">Initializing the trip.</string>
    <string name="distancenotificationservice_is_running_notification_message">Trip duration: %%DURATION%%, last updated on %%LASTCHECK%%.</string>
    <string name="distancenotificationservice_is_running_notification_message_details">Remaining distance: %%DISTANCE%%. Duration: %%DURATION%%. Last updated on %%LASTCHECK%%.</string>

    <!-- Strings for sms -->
    <string name="arrivalSms">I have arrived at %%DESTINATION%%.\n\nSent by ETA: https://goo.gl/bPqq17</string>
    <string name="startTripSms">I am now on my way to %%DESTINATION%%. I will probably arrive in %%DURATION%%, at %%ARRIVAL%%.\n\nSent by ETA: https://goo.gl/bPqq17</string>
    <string name="duringTripSms">I am still on my way to %%DESTINATION%%. I\'ll be there in about %%DURATION%%, at %%ARRIVAL%%.</string>
    <string name="arrivalTimeChangedSms">My arrival time has changed. I\'ll be there in about %%DURATION%%, at %%ARRIVAL%%.</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>

    <!-- API Keys -->
    <string name="api_debug_key" translatable="false">AIzaSyAD9XkkUbtIyOdTe5-J1Och5ne3deHU5fw"</string>
    <string name="api_debug_key_desktop" translatable="false">AIzaSyCWsaloybxe1BiEl_E_1WEbvg_RQvPZSc0</string>
    <string name="api_production_key" translatable="false">AIzaSyCLZJ4HjXNi4QqOq1g9R0cgMCMD1g1c5Is"</string>
    <string name="api_server_key" translatable="false">AIzaSyCCYBSRnOHJ2XWtvQYlE2igzwK_kqA_bls</string>
    <string name="phone">Phone</string>
    <string name="send_notification_now">Send notification now</string>
    <string name="minutes">minutes</string>
    <string name="remainingMinutesText">Remaining</string>
    <string name="sms_update_sent">An update has been sent.</string>
    <string name="minute">minute</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="meters">meters</string>
    <string name="km">km</string>
    <string name="no_search_results_found">No search results found.</string>
    <string name="search_results">Search results</string>
    <string name="no_recent_destinations">No recent destinations</string>
    <string name="gps_needed_for_autocomplete">Location services are required for the autocompletion of places.</string>
    <string name="sms_sent_toast">Message has been sent.</string>
    <string name="min_abbreviation">min</string>
    <string name="hour_abbreviation">h</string>
    <string name="almostThereSms">I am almost at the destination. My remaining time is %%DURATION%%, I\'ll be arriving at aroung %%ARRIVAL%%.</string>
    <string name="tripActivityFinishButtonMessage">Do you want to finish this trip and inform your contact that you have arrived?</string>
    <string name="userFinishedTripSms">I have arrived at the destination.</string>
    <string name="mainActivity_apiClientConnectionFailure">The Google API Client could connect to the remote party. Are you online?</string>
    <string name="locationPermissionExplanation">The app needs to access your location in order to compute the time it takes to reach your destination. The app is useless if you do not grant this permission.</string>
    <string name="contactPermissionExplanation">The app allows for some additional features if you allow it to access your contacts. An example are the pictures of contacts that will be displayed.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="keep_screen_on">Keep screen on</string>
    <string name="delete_recent_trips">Clear recent trips.</string>
    <string name="delete_recent_destinations">Clear recent destinations</string>

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <!--
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <!--
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    -->
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="delete_recent_destinations_button" translatable="false">delete_recent_destinations_button</string>
    <string name="delete_recent_destinations_summary">Removes all destinations that you have selected in the past.</string>
    <string name="delete_recent_trips_key" translatable="false">delete_recent_trips</string>
    <string name="delete_recent_trips_summary">Removes all previous trips.</string>
    <string name="preferences_enable_logging_summary">Record debug information in external log file.</string>
    <string name="preferences_enable_logging">Enable logging</string>
    <string name="preferences_general_settings_header">General</string>
    <string name="preferences_debugging_header">Debugging</string>
    <string name="preferences_sms_settings">SMS</string>
    <string name="preferences_default_send_start_sms_key">Send SMS on Trip Start</string>
    <string name="preferences_default_send_start_sms_summary">Default setting for sending sms at trip start.</string>
    <string name="preferences_default_send_continuous_sms_summary">Default setting for sending sms updates during the trip.</string>
    <string name="preferences_default_send_continuous_sms_key">SMS Updates</string>
    <string name="preferences_default_send_almost_there_sms_key">Send SMS when almost there</string>
    <string name="preferences_default_send_almost_there_sms_summary">Default setting for sending sms update when the destination is almost reached.</string>
    <string name="preferences_default_send_trip_finished_sms_key">Send SMS on arrival</string>
    <string name="preferences_default_send_trip_finished_sms_summary">Default setting for sending sms when the destination is arrived.</string>
    <string name="show_keep_display_on_hint">The app will keep the display active until toggled of manually.</string>
    <string name="show_keep_display_off_hint">The app will no longer keep the display active.</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback_explanation">Send an email to the developer.</string>
    <string name="send_feedback">Send Email</string>
    <string name="not_all_information_entered_on_trip_start">You have to enter a phone number and a destination to start a trip.</string>
    <string name="start">Start</string>
    <string name="internet_not_available_toast">You need an active internet connection to use this app.</string>
    <string name="map">Map</string>
    <string name="paste">Paste</string>
</resources>
